--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
     "babel-plugin-named-asset-import": "^0.2.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-react-app": "^5.0.2",
     "bfj": "6.1.1",
     "bootstrap": "^4.1.3",
@@ -71,6 +72,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5"
   },
@@ -113,6 +115,10 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      ["@babel/plugin-proposal-decorators",{ "legacy": true }],
+      ["@babel/plugin-proposal-class-properties",{ "loose": true }]
     ]
   }
 }
