--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mini-css-extract-plugin": "0.4.3",
     "mobx": "^5.5.0",
     "mobx-react": "^5.2.8",
+    "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -47,7 +48,7 @@
     "react-dev-utils": "^6.0.3",
     "react-dom": "^16.5.2",
     "resolve": "1.8.1",
-    "sass-loader": "7.1.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
@@ -117,8 +118,18 @@
       "react-app"
     ],
     "plugins": [
-      ["@babel/plugin-proposal-decorators",{ "legacy": true }],
-      ["@babel/plugin-proposal-class-properties",{ "loose": true }]
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
+      ]
     ]
   }
 }
