--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
+    "react-css-loaders": "0.0.5",
     "react-dev-utils": "^6.0.3",
     "react-dom": "^16.5.2",
     "resolve": "1.8.1",
