--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "react-css-loaders": "0.0.5",
     "react-dev-utils": "^6.0.3",
     "react-dom": "^16.5.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
