--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
+    "sweetalert2": "^7.28.4",
+    "sweetalert2-react-content": "^1.0.1",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
